Migrate Teku to Java 21