@@ -103,12 +103,12 @@ public class SyncSourceBatch implements Batch {
 
   @Override
   public Optional<SignedBeaconBlock> getFirstBlock() {
-    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.get(0));
+    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.getFirst());
   }
 
   @Override
   public Optional<SignedBeaconBlock> getLastBlock() {
-    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.get(blocks.size() - 1));
+    return blocks.isEmpty() ? Optional.empty() : Optional.of(blocks.getLast());
   }
 
   @Override
@@ -327,8 +327,7 @@ public class SyncSourceBatch implements Batch {
       blobSidecarsByBlockRoot.putAll(newBlobSidecarsByBlockRoot);
     }
 
-    if (newBlocks.isEmpty()
-        || newBlocks.get(newBlocks.size() - 1).getSlot().equals(getLastSlot())) {
+    if (newBlocks.isEmpty() || newBlocks.getLast().getSlot().equals(getLastSlot())) {
       complete = true;
     }
   }
